--- a/diskografia.html
+++ b/diskografia.html
@@ -65,9 +65,14 @@
   	<img class="logo" src="logo.png" alt="Logo">
   	
   	<div id="content">
-  	<!-- SIVUN SISÄLTÖ TÄHÄN -->
+  	
   	
   	<h1>DISKOGRAFIA</h1>
+   
+   
+    <p>
+		<b>Itseänne varten (Nupowion NETR22001, 2022)</b> Itseämme varten | Aika oota ei | Sateen jälkeen | Yön selkään | Rändri | Herää Leidi | Viimeinen keikka | Elämän turisti | Kesää kohti | Balladi Vilhelm Kondomista
+		</p> 
   	
    	<p>
 		<b>Taivaan mannaa - tai vaan mannaa (pappaojanen 6430013690175, 2015)</b> Taivaan mannaa | Muihin naisiin | Levoton | Raumanlinna | Pidä naamas kii | Korkit auki | Primitiivihumppa | Mustaa ja valkoista | Tänä syksynä | Mansikkapellot | Kun ihminen menee rikki | Avaruuslimbo
@@ -115,10 +120,10 @@
   	
   	</p>
   	
-  	<!-- SIVUN SISÄLTÖ LOPPU -->
+  	
   	</div>
 
-  	<div id="footer"> Päivitetty 08.12.2015 </div>
+  	<div id="footer"> Päivitetty 18.12.2022 </div>
     
   </body>
 </html>
