--- a/puoti.html
+++ b/puoti.html
@@ -71,7 +71,7 @@
   	
   	<p>
   		<h2>LEVYJÄ</h2>
-  		Seuraavia levyjä on tällä hetkellä saatavana suoraan pappaojasen varastosta:
+  		Seuraavia levyjä on tällä hetkellä saatavana suoraan varastosta:
   		
   		<p>
   			<img src="img/milarcajava.jpg" alt="Milarca (2006/1975 CD) painos loppu">
