--- a/historia.html
+++ b/historia.html
@@ -138,14 +138,22 @@
   		<h2>2015</h2>
   		Joulukuussa ilmestyy kuudes studiosoitto Taivaan mannaa - tai vaan mannaa
   	</p>
+   
+   </p>
+  	  	<p>
+  		<h2>2022</h2>
+  		Bändi viettää sähköistymisensä 50-vuotis juhlavuotta ja marraskuussa ilmestyy seitsemäs studiosoitto Itseänne varten
+  	</p>
+   
    <p>
-  		<h2>2017</h2>
+  		
   		1.11.2020 alkaen kokoonpano on ollut seuraava:
   		<ul style="list-style-type: none;">
   			<li>Nuppe Nurminen: kitara, laulu</li>
-  			<li>Poeka Ryhänen: kitara, laulu</li>
-  			<li>Onde Ouninkorpi: basso, laulu</li>
-  			<li>Timo Vehmas: rummut</li>
+  			<li>Poeka Ryhänen: kitara, laulu (Kimmo Vehovirta )</li>
+        <li>: kiipparit ( Timo Ojala, Jammi Humalamäki, Masi Luoma )
+  			<li>Onde Ouninkorpi: basso, laulu ( Pappa Ojanen )</li>
+  			<li>Timo Vehmas: rummut ( Espe Marjamäki, Timo Niskala, Mitzi Lyden, Rape Riikonen )</li>
   			<li>Veke Lyttinen: levylaulu</li>
   		</ul>
   	</p>
