--- a/historia.html
+++ b/historia.html
@@ -75,7 +75,7 @@
   	</p>
   	<p>
   		<h2>1972</h2>
-  		Duo on valmis muuttumaan sähköiseksi yhtyeeksi, kun mukaan tulevat kitaristit Eetu Tuominen ja Ari Nurminen, Jukka Ojanen tarttuu bassoon ja rumpaleina vuorottelevat Juha Kaartinen sekä Raimo Riikonen,Veikko Lyttinen keskittyy laulamiseen. Aluksi tehdään muutamia lämppäri-keikkoja ja ajan hengen mukaisesti ohjelmistona on sen hetken hittibiisejä ja 60-luvun rokkicovereita.
+  		Duo on valmis muuttumaan sähköiseksi yhtyeeksi, kun mukaan tulevat kitaristit Eetu Tuominen ja Ari Nurminen, Jukka Ojanen tarttuu bassoon ja rumpaleina vuorottelevat Juha Kaartinen sekä Raimo Riikonen, Veikko Lyttinen keskittyy laulamiseen. Aluksi tehdään muutamia lämppäri-keikkoja ja ajan hengen mukaisesti ohjelmistona on sen hetken hittibiisejä ja 60-luvun rokkicovereita.
   	</p>
   	<p>
   		<h2>1973</h2>
@@ -153,7 +153,7 @@
   			<li>Poeka Ryhänen: kitara, laulu (Kimmo Vehovirta )</li>
         <li>: kiipparit ( Timo Ojala, Jammi Humalamäki, Masi Luoma )
   			<li>Onde Ouninkorpi: basso, laulu ( Pappa Ojanen )</li>
-  			<li>Timo Vehmas: rummut ( Espe Marjamäki, Timo Niskala, Mitzi Lyden, Rape Riikonen )</li>
+  			<li>Timo Vehmas: rummut ( Espe Marjamäki, Timo Niskala, Mitzi Lyden, Rape Riikonen, Juha Kaartinen )</li>
   			<li>Veke Lyttinen: levylaulu</li>
   		</ul>
   	</p>
