--- a/index.html
+++ b/index.html
@@ -82,13 +82,17 @@
 	N&R on jälleen jalkautunut elämää pursuaviin mestoihin yleisönsä ja itsensä riemuksi ja ihmetykseksi. Seuraa keikkakalenteria ja saavu kannustamaan rokin ikiliikkujat ja itsesi taivaallisiin akordeihin!
   	</p>
    <p>
-   Vuosi 2022 on bändin merkkivuosi jolloin tulee kuluneeksi 50 vuotta sähköisen bändin perustamisesta. Isompia pippaloita ei ole tarkoitus asian tiimoilta järjestää mutta julkaisemme juhlan kunniaksi uuden levyn. Materiaali on viimeistelyä vaille kasassa ja odottaa nimeään. Toivotaan että tästä vuodesta käynnistyy taas normaali keikkarumba ja keikkakalenteriin tulee muutamia osumia!
+   Vuosi 2022 on bändin merkkivuosi jolloin tulee kuluneeksi 50 vuotta sähköisen bändin perustamisesta. Juhlan kunniaksi julkaisimme uuden CD-levyn joka sai nimekseen Itseänne varten.
+   Levyn, samoin kuin osan aikaisemmista tuotoksistamme, voi tilata puodista.
+   </p>
+   <p>
+    Toivotaan että pian koittaa taas normaalimpi aika, keikkarumba käynnistyy ja keikkakalenteriin tulee muutamia osumia!
   	</p>
    
   	<!-- SIVUN SISÄLTÖ LOPPU -->
   	</div>
 
-  	<div id="footer"> Päivitetty 17.10.2022 </div>
+  	<div id="footer"> Päivitetty 18.10.2022 </div>
     
   </body>
 </html>
