--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
     Toivotaan että pian koittaa taas normaalimpi aika, keikkarumba käynnistyy ja keikkakalenteriin tulee muutamia osumia!
   	</p>
    
-  	<!-- SIVUN SISÄLTÖ LOPPU -->
+    <img class="centered" src="img/itseänne600.jpg" alt="itseänne varten">
+   
+  
   	</div>
 
   	<div id="footer"> Päivitetty 18.10.2022 </div>
