--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   	
   	
   	<p>
-  	Nolo&Rähjä on legendaarinen rokkibändi Sisä-Suomen sisimmistä sisäosista, joka on ollut 70-luvun alusta asti tiukasti mukana rehellisen rokin ja siihen liittyvien lieveilmiöiden tukemisessa ja kehittämisessä. Oma tuotanto rakentuu suomalaisista sanoista ja soinnuista, Manserokin hengessä.
+  	Nolo&Rähjä on legendaarinen rokkibändi Sisä-Suomen sisimmistä sisäosista, ja ollut 70-luvun alusta asti tiukasti mukana rehellisen rokin ja siihen liittyvien lieveilmiöiden tukemisessa ja kehittämisessä. Oma tuotanto rakentuu suomalaisista sanoista ja soinnuista, Manserokin hengessä.
 	</p>
 	
 	<p>
