--- a/historia.html
+++ b/historia.html
@@ -150,10 +150,10 @@
   		1.11.2020 alkaen kokoonpano on ollut seuraava:
   		<ul style="list-style-type: none;">
   			<li>Nuppe Nurminen: kitara, laulu</li>
-  			<li>Poeka Ryhänen: kitara, laulu (Kimmo Vehovirta )</li>
-        <li>: kiipparit ( Timo Ojala, Jammi Humalamäki, Masi Luoma )
+  			<li>Poeka Ryhänen: kitara, laulu (Kimmo Vehovirta, Eetu Tuominen )</li>
+        <li>Noname: kiipparit ( Timo Ojala, Jammi Humalamäki, Masi Luoma )
   			<li>Onde Ouninkorpi: basso, laulu ( Pappa Ojanen )</li>
-  			<li>Timo Vehmas: rummut ( Espe Marjamäki, Timo Niskala, Mitzi Lyden, Rape Riikonen, Juha Kaartinen )</li>
+  			<li>Timo Vehmas: rummut ( Espe Marjamäki, Nikke Niskala, Mitzi Lyden, Rape Riikonen, Juha Kaartinen )</li>
   			<li>Veke Lyttinen: levylaulu</li>
   		</ul>
   	</p>
