--- a/kuuntele.html
+++ b/kuuntele.html
@@ -190,8 +190,8 @@
    
    
     <p>
-  	    <img src="img/itseänne.jpg" alt="">
-  	    <h2>Itseänne varten (2022 CD) </h2>  
+  	    
+  	    <h2>Itseänne varten (2022 CD)  <img src="img/itseänne.jpg" alt=""></h2>  
 		<ul style="list-style-type: none;">
                 <li><a href="audio/itseamme varten.mp3">ITSEÄMME VARTEN</a></li>
                 <li><a href="audio/aika oota ei.mp3">AIKA OOTA EI</a></li>
