--- a/teksteja.html
+++ b/teksteja.html
@@ -121,12 +121,25 @@
     <li><a href="tekstit/mansikkapellot.html" target="_blank">Mansikkapellot</a></li>
     <li><a href="tekstit/kun.html" target="_blank">Kun ihminen menee rikki</a></li>
     <li><a href="tekstit/limbo.html" target="_blank">Avaruuslimbo</a></li>
+	<li><a href="tekstit/itseamma varten.html" target="_blank">Itseämme varten</a></li>
+	<li><a href="tekstit/aika oota ei.html" target="_blank">Aika oota ei</a></li>
+	<li><a href="tekstit/sateen jalkeen.html" target="_blank">Sateen jälkeen</a></li>
+	<li><a href="tekstit/yon selkaan.html" target="_blank">Yön selkään</a></li>
+	<li><a href="tekstit/randri.html" target="_blank">Rändri</a></li>
+	<li><a href="tekstit/heraa leidi.html" target="_blank">Herää Leidi</a></li>
+	<li><a href="tekstit/viimeinen keikka.html" target="_blank">Viimeinen keikka</a></li>
+	<li><a href="tekstit/elaman turisti.html" target="_blank">Elämän turisti</a></li>
+	<li><a href="tekstit/kesaa kohti.html" target="_blank">Kesää kohti</a></li>
+	<li><a href="tekstit/balladi vilhelm kondomista.html" target="_blank">Balladi Vilhelm Kondomista</a></li>
+
+
+
   	</ul>
   	
   	<!-- SIVUN SISÄLTÖ LOPPU -->
   	</div>
 
-  	<div id="footer"> Päivitetty 08.12.2015 </div>
+  	<div id="footer"> Päivitetty 01.11.2022 </div>
     
   </body>
 </html>
