--- a/teksteja.html
+++ b/teksteja.html
@@ -121,7 +121,7 @@
     <li><a href="tekstit/mansikkapellot.html" target="_blank">Mansikkapellot</a></li>
     <li><a href="tekstit/kun.html" target="_blank">Kun ihminen menee rikki</a></li>
     <li><a href="tekstit/limbo.html" target="_blank">Avaruuslimbo</a></li>
-	<li><a href="tekstit/itseamma varten.html" target="_blank">Itseämme varten</a></li>
+	<li><a href="tekstit/itseamme varten.html" target="_blank">Itseämme varten</a></li>
 	<li><a href="tekstit/aika oota ei.html" target="_blank">Aika oota ei</a></li>
 	<li><a href="tekstit/sateen jalkeen.html" target="_blank">Sateen jälkeen</a></li>
 	<li><a href="tekstit/yon selkaan.html" target="_blank">Yön selkään</a></li>
