--- a/historia.html
+++ b/historia.html
@@ -151,7 +151,7 @@
   		<ul style="list-style-type: none;">
   			<li>Nuppe Nurminen: kitara, laulu</li>
   			<li>Poeka Ryhänen: kitara, laulu (Kimmo Vehovirta, Eetu Tuominen )</li>
-        <li>Noname: kiipparit ( Timo Ojala, Jammi Humalamäki, Masi Luoma )
+        	<li>Noname: kiipparit ( Timo Ojala, Jammi Humalamäki, Heidi Perello, Masi Luoma )
   			<li>Onde Ouninkorpi: basso, laulu ( Pappa Ojanen )</li>
   			<li>Timo Vehmas: rummut ( Espe Marjamäki, Nikke Niskala, Mitzi Lyden, Rape Riikonen, Juha Kaartinen )</li>
   			<li>Veke Lyttinen: levylaulu</li>
