--- a/diskografia.html
+++ b/diskografia.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="fi">
   <head>
-    <meta charset="utf-8">
+	<title>NOLO&RÄHJÄ yhtyeen virallinen kotisivu</title>
+    <meta charset="utf-8" name="keywords" content="NOLO&RÄHJÄ, nolo et rähjä, manserock">
 
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="favicon.png">
