--- a/diskografia.html
+++ b/diskografia.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="fi">
   <head>
-	<title>NOLO&RÄHJÄ yhtyeen virallinen kotisivu</title>
-    <meta charset="utf-8" name="keywords" content="NOLO&RÄHJÄ, nolo et rähjä, manserock">
+	
+
 
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="favicon.png">
 
-    <title> Nolo & Rähjä </title>
+    <title> Nolo&Rähjä yhtyeen virallinen kotisivu</title>
+    <meta charset="utf-8" name="keywords" content="NOLO&RÄHJÄ, nolo et rähjä, manserock">
 
   </head>
 
