--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="favicon.png">
 
-    <title> Nolo & Rähjä </title>
-
+    <title> Nolo&Rähjä yhtyeen virallinen kotisivu </title>
+	<meta charset="utf-8" name="keywords" content="NOLO&RÄHJÄ, nolo et rähjä, manserock">
   </head>
 
   <body>
@@ -97,7 +97,7 @@
   
   	</div>
 
-  	<div id="footer"> Päivitetty 12.02.2023 </div>
+  	<div id="footer"> Päivitetty 18.02.2023 </div>
     
   </body>
 </html>
