--- a/keikkakalenteri.html
+++ b/keikkakalenteri.html
@@ -72,6 +72,10 @@
   	<h1>   KEIKAT </h1>
   	
   	<ul style="list-style-type: none;">
+
+	<h2>2023</h2>
+	<li>01.04.2022, Juhlatalo Hovi, (yksityistilaisuus), Tampere</>
+	<li>29.04.2022, Villihanhi, showtime 23, Lempäälä</>	
    
    <h2>2022</h2>
    <li>25.11.2022, Kujakolli, uuden CD:n Itseänne varten julkkarit, showtime 22.00,  Pispala</>
