--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	N&R on jälleen jalkautunut elämää pursuaviin mestoihin yleisönsä ja itsensä riemuksi ja ihmetykseksi. Seuraa keikkakalenteria ja saavu kannustamaan rokin ikiliikkujat ja itsesi taivaallisiin akordeihin!
   	</p>
    <p>
-   Vuosi 2022 on bändin merkkivuosi jolloin tulee kuluneeksi 50 vuotta sähköisen bändin perustamisesta. Juhlan kunniaksi julkaisimme uuden CD-levyn joka sai nimekseen Itseänne varten.
+   Vuosi 2022 oli bändin merkkivuosi jolloin tulee kuluneeksi 50 vuotta sähköisen bändin perustamisesta. Juhlan kunniaksi julkaisimme uuden CD-levyn joka sai nimekseen Itseänne varten.
    Levyn, samoin kuin osan aikaisemmista tuotoksistamme, voi tilata puodista.
    </p>
    <p>
