--- a/keikkakalenteri.html
+++ b/keikkakalenteri.html
@@ -74,6 +74,7 @@
   	<ul style="list-style-type: none;">
 
 	<h2>2023</h2>
+	<li>08.12.2023, Valleri, (yksityistilaisuus), Tampere</>
 	<li>29.04.2023, Villihanhi, showtime 23, Lempäälä</>
 	<li>01.04.2023, Juhlatalo Hovi, (yksityistilaisuus), Tampere</>
    
@@ -171,7 +172,7 @@
   	<!-- SIVUN SISÄLTÖ LOPPU -->
   	</div>
 
-  	<div id="footer"> Päivitetty 06.04.2023 </div>
+  	<div id="footer"> Päivitetty 08.11.2023 </div>
     
   </body>
 </html>
