--- a/kuvagalleria.html
+++ b/kuvagalleria.html
@@ -92,10 +92,10 @@
      <p>
   		<h2>Kessan Baari 2017</h2>
   		<img class="centered" src="img/kessa01.jpg" alt="Kessan Baari 2017">
-  		<br>
+  		<!--br>
   		<img class="centered" src="img/kessa02.jpg" alt="Kessan Baari 2017">
   		<br>
-  		<img class="centered" src="img/kessa03.jpg" alt="Kessan Baari 2017">	
+  		<img class="centered" src="img/kessa03.jpg" alt="Kessan Baari 2017" -->	
   	</p>
   	
   	<p>
