--- a/kuvagalleria.html
+++ b/kuvagalleria.html
@@ -77,7 +77,12 @@
   		<br>
   		
   	</p>
-   
+
+	  <p>
+		<h2>Murole 2020</h2>
+		<img class="centered" src="img/murole2020.jpg" alt="Murole 2020">
+		
+	</p> 
 
    
    <p>
