--- a/kuvagalleria.html
+++ b/kuvagalleria.html
@@ -79,6 +79,12 @@
   	</p>
 
 	  <p>
+		<h2>Jumestock 2023</h2>
+		<img class="centered" src="img/jumes.jpg" alt="Jumestock 2023">
+		
+	</p> 
+
+	  <p>
 		<h2>Murole 2020</h2>
 		<img class="centered" src="img/murole2020.jpg" alt="Murole 2020">
 		
