--- a/kuvagalleria.html
+++ b/kuvagalleria.html
@@ -127,6 +127,12 @@
   		<img class="centered" src="img/nuppejammi2.jpg" alt="Nuppe ja Jammi">
   		Nuppe ja Jammi
   	</p>
+
+	  <p>
+		<h2>Humppila 1976</h2>
+		<img class="centered" src="img/humppila76.jpg" alt="Humppila 1976">
+	
+	</p>
   	
   	<p>
   		<h2>Treenailua ja uumoilua v.1975</h2>
