--- a/kuvagalleria.html
+++ b/kuvagalleria.html
@@ -108,6 +108,12 @@
   		<br>
   		<img class="centered" src="img/kessa03.jpg" alt="Kessan Baari 2017" -->	
   	</p>
+
+	  <p>
+		<h2>Manserokin vanhat pierut 2012</h2>
+		<img class="centered" src="img/paussi_dper.jpg" alt="vanhat pierut 2012">
+		
+	</p>
   	
   	<p>
   		<h2>Räminää ja Pauketta Vainikkalassa 2009</h2>
