--- a/kuvagalleria.html
+++ b/kuvagalleria.html
@@ -111,7 +111,7 @@
 
 	  <p>
 		<h2>Manserokin vanhat pierut 2012</h2>
-		<img class="centered" src="img/paussi_dper.jpg" alt="vanhat pierut 2012">
+		<img class="centered" src="img/manserock2012.jpg" alt="vanhat pierut 2012">
 		
 	</p>
   	
