--- a/keikkakalenteri.html
+++ b/keikkakalenteri.html
@@ -72,6 +72,10 @@
   	<h1>   KEIKAT </h1>
   	
   	<ul style="list-style-type: none;">
+	<h2>2024</h2>
+	<li>14.06.2023, Valleri, (yksityistilaisuus), Tampere</>
+	<li>03.08.2023, Jumes Stock, Jumesniemi</>	
+	<li>10.08.2023, Innasjärvi Blues, Lenkkula, Pälkäne</>
 
 	<h2>2023</h2>
 	<li>08.12.2023, Valleri, (yksityistilaisuus), Tampere</>
