--- a/index.html
+++ b/index.html
@@ -89,13 +89,15 @@
 
    <p>
 
-	https://www.youtube.com/@nolorahja1788
+	
+	<a href="https://www.youtube.com/@nolorahja1788">YouTube</a>
 
    </p>
 
    <P>
 
-	https://www.facebook.com/nolojarahja/?locale=fi_FI
+	
+	<a href="https://www.facebook.com/nolojarahja/?locale=fi_FI">Facebook</a>
 
    </P>
 <!--
