--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
    
   <img class="logo" src="logo.png" alt="Logo">
   
-  <img class="centered" src="img/ondepoikakuja.jpg" alt="kortti">
+  <img class="centered" src="img/bandikuva2024.jpg" alt="kortti">
    
   
   	
